--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="hint">#96B7C5</color>
     <color name="toolbar">#D9D9D9</color>
     <color name="red">#FF0000</color>
-    <color name="neon_green">#41A317</color>
+    <color name="neon_green">#39FF14</color>
     <color name="chat_background">#ffeab4</color>
     <color name="choco">#622A0F</color>
     <color name="purple_200">#FFBB86FC</color>
@@ -15,6 +15,4 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="lavender">#8692f7</color>
-    <color name="editprofilebg">#41A317</color>
-    <color name="profileBg">#9FD4A3</color>
 </resources>
