--- a/app/src/main/res/layout/fragment_editprofile.xml
+++ b/app/src/main/res/layout/fragment_editprofile.xml
@@ -11,18 +11,22 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:background="@color/editprofilebg"
+        android:background="@color/lime"
         android:padding="12dp">
 
-        <ImageView
-            android:id="@+id/back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/back"
+        <ImageButton
+            android:id="@+id/backbtn"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="@drawable/ic_back_button"
+            android:backgroundTint="@color/white"
             android:layout_marginStart="8dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"/>
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:contentDescription="buttonback"/>
+
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -51,34 +55,27 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="54dp"/>
 
-        <ImageView
-            android:id="@+id/profileLine"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/pline"
-            app:layout_constraintTop_toBottomOf="@id/profilePic"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="24dp"
-            app:layout_constraintRight_toRightOf="parent"/>
 
         <EditText
             android:id="@+id/editName"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/profileLine"
+            android:layout_height="48dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/robotobold"
+            android:hint="Name"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            app:layout_constraintHorizontal_bias="0.4"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="40dp"
-            android:textSize="16sp"
-            android:fontFamily="@font/robotobold"
-            android:textColor="@color/black"
-            android:hint="Name"/>
+            app:layout_constraintTop_toBottomOf="@id/profilePic"
+            android:padding="12dp"/>
 
         <EditText
             android:id="@+id/editUnit"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             app:layout_constraintTop_toBottomOf="@id/editName"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -87,12 +84,13 @@
             android:textSize="16sp"
             android:fontFamily="@font/robotobold"
             android:textColor="@color/black"
-            android:hint="Unit Address"/>
+            android:hint="Unit Address"
+            android:padding="12dp"/>
 
         <EditText
             android:id="@+id/editEmail"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             app:layout_constraintTop_toBottomOf="@id/editUnit"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -101,12 +99,13 @@
             android:textSize="16sp"
             android:fontFamily="@font/robotobold"
             android:textColor="@color/black"
-            android:hint="Email"/>
+            android:hint="Email"
+            android:padding="12dp"/>
 
         <EditText
             android:id="@+id/editPassword"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             app:layout_constraintTop_toBottomOf="@id/editEmail"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -115,12 +114,13 @@
             android:textSize="16sp"
             android:fontFamily="@font/robotobold"
             android:textColor="@color/black"
-            android:hint="Password"/>
+            android:hint="Password"
+            android:padding="12dp"/>
 
         <EditText
             android:id="@+id/editPhone"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             app:layout_constraintTop_toBottomOf="@id/editPassword"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -129,12 +129,16 @@
             android:textSize="16sp"
             android:fontFamily="@font/robotobold"
             android:textColor="@color/black"
-            android:hint="Phone no"/>
+            android:hint="Phone number"
+            android:padding="12dp"/>
 
-        <ImageView
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/editprofile"
+            android:hint="Edit Profile"
+            android:backgroundTint="@color/lime"
+            android:textColorHint="@color/white"
             app:layout_constraintTop_toBottomOf="@id/editPhone"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="12dp"
