--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,8 +56,8 @@
             android:id="@+id/txtlupapass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="lupa_password"
-            android:textColor="@color/black"
+            android:text="lupa password"
+            android:textColor="@color/brown"
             android:fontFamily="@font/robotomedium"
             android:paddingLeft="25dp"
             />
@@ -76,8 +76,8 @@
             android:id="@+id/txtmasukdengangoogle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="masuk_dengan_google"
-            android:textColor="@color/black"
+            android:text="masuk dengan google"
+            android:textColor="@color/brown"
             android:fontFamily="@font/robotomedium"
             android:gravity="center"
             android:layout_marginBottom="10dp"
@@ -89,7 +89,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:hint="masuk"
-            android:textColorHint="@color/brown"
+            android:textColorHint="@color/black"
             android:fontFamily="@font/robotomedium"
             android:paddingBottom="10dp"
             android:backgroundTint="@color/white"/>
