--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -92,7 +92,16 @@
             android:textColorHint="@color/black"
             android:fontFamily="@font/robotomedium"
             android:paddingBottom="10dp"
-            android:backgroundTint="@color/white"/>
+            android:backgroundTint="@color/white" />
+
+        <CheckBox
+            android:id="@+id/checkboxRememberMe"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_gravity="center"
+            android:text="Remember Me"
+            android:fontFamily="@font/robotoregular"/>
 
     </LinearLayout>
 
@@ -112,7 +121,6 @@
             android:text="Belum punya akun?"
             android:textColor="@color/black"
             android:fontFamily="@font/robotomedium"
-
             />
 
         <TextView
@@ -122,7 +130,6 @@
             android:text="registrasi"
             android:textColor="@color/brown"
             android:fontFamily="@font/robotomedium"
-
             />
 
 
