Home,product page done,user SessionManager and remmberMe done

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="140dp"
         android:fontFamily="@font/robotobold"
         android:text="Daftar"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/black"
         android:textSize="48sp"
         android:id="@+id/txtmasuk">
     </TextView>
