--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -101,6 +101,7 @@
             android:layout_marginTop="5dp"
             android:layout_gravity="center"
             android:text="Remember Me"
+            android:textColor="@color/black"
             android:fontFamily="@font/robotoregular"/>
 
     </LinearLayout>
