--- a/app/src/main/res/layout/grid_products_landscape.xml
+++ b/app/src/main/res/layout/grid_products_landscape.xml
@@ -7,7 +7,8 @@
     app:cardElevation="15dp"
     android:layout_marginTop="35dp"
     android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp">
+    android:layout_marginRight="10dp"
+    android:layout_marginBottom="10dp">
 
     <LinearLayout
             android:id="@+id/layoutgridproductlandscape"
