--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/container">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:id="@+id/profileBox"
@@ -41,25 +39,13 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
+
             <TextView
                 android:id="@+id/profileName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/robotobold"
                 android:text="TestUser"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toTopOf="@id/profilePhone"
-                app:layout_constraintLeft_toRightOf="@id/profileImg"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/userEmail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/robotobold"
-                android:text="Email@gmail.com"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@id/profilePhone"
@@ -100,7 +86,7 @@
         android:id="@+id/editProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="4dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/profileBox"
@@ -109,11 +95,35 @@
         android:fontFamily="@font/robotobold"
         android:textSize="16sp"/>
 
+    <ImageView
+        android:id="@+id/editIcon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/baseline_edit_24"
+        app:layout_constraintTop_toTopOf="@id/editProfile"
+        app:layout_constraintBottom_toBottomOf="@id/editProfile"
+        app:layout_constraintLeft_toRightOf="@id/editProfile"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="2dp"
+        />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="580dp"
         android:padding="12dp"
         app:layout_constraintTop_toBottomOf="@id/profileBox">
+
+        <ImageView
+            android:id="@+id/historyIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/baseline_history_24"
+            app:layout_constraintTop_toTopOf="@id/orderTitle"
+            app:layout_constraintBottom_toBottomOf="@id/orderTitle"
+            app:layout_constraintLeft_toRightOf="@id/orderTitle"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="2dp"
+            />
 
         <TextView
             android:id="@+id/orderTitle"
@@ -342,4 +352,3 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
