--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -50,7 +50,7 @@
                 android:id="@+id/galons"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src=""/>
+                android:src="@drawable/rectangle"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -121,7 +121,7 @@
                 android:id="@+id/berasft"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src=""/>
+                android:src="@drawable/rectangle"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
