--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -46,7 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/btn"
-            android:hint="Email"
+            android:hint="Email/No-Telp"
             android:paddingLeft="40dp"
             android:textColorHint="@color/hint"
             android:paddingBottom="10dp"
